--- a/player/build.gradle
+++ b/player/build.gradle
@@ -41,6 +41,6 @@ dependencies {
     api "com.google.android.exoplayer:exoplayer-rtsp:2.14.2"
     api "com.google.android.exoplayer:extension-rtmp:2.14.2"
     api "com.google.android.exoplayer:extension-okhttp:2.14.2"
-    api 'com.aliyun.sdk.android:AliyunPlayer:5.4.6.0'
+    api 'com.aliyun.sdk.android:AliyunPlayer:5.4.6.0-full'
     api 'xyz.doikki.android.dkplayer:dkplayer-ui:3.3.5'
 }
