--- a/player/build.gradle
+++ b/player/build.gradle
@@ -33,15 +33,11 @@ android {
     }
 }
 
-dependencies { 
- ​   ​def​ exoplayer_version ​=​ ​"​2.18.7​"
+dependencies {
     implementation "androidx.annotation:annotation:1.3.0"
- 
- ​   implementation ​"​com.google.android.exoplayer:exoplayer-core:​${​exoplayer_version​}​" 
- ​   implementation ​"​com.google.android.exoplayer:exoplayer-hls:​${​exoplayer_version​}​" 
- ​   implementation ​"​com.google.android.exoplayer:exoplayer-dash:​${​exoplayer_version​}​" 
- ​   implementation ​"​com.google.android.exoplayer:exoplayer-smoothstreaming:​${​exoplayer_version​}​"
-    
+    api "com.google.android.exoplayer:exoplayer-core:2.14.2"
+    api "com.google.android.exoplayer:exoplayer-dash:2.14.2"
+    api "com.google.android.exoplayer:exoplayer-hls:2.14.2"
     api "com.google.android.exoplayer:exoplayer-rtsp:2.14.2"
     api "com.google.android.exoplayer:extension-rtmp:2.14.2"
     api "com.google.android.exoplayer:extension-okhttp:2.14.2"
